<resources>
    <string name="app_name">GamerTool</string>
    <string name="load_adapter_text">Error getting new games…</string>
    <string name="main_fragment_title">GamerTool</string>
    <string name="logo_description">Logo</string>
    <string name="add_button">Add to my wishlist</string>
    <string name="delete_button_content_description">Delete button</string>
    <string name="delete_button">Delete</string>
    <string name="finished_button">Finished</string>
    <string name="unfinished_button">Unfinished</string>
    <string name="cancel">Cancel</string>
    <string name="alert_dialog_title">Delete game</string>
    <string name="alert_dialog_text">Are you sure you want to delete this game?</string>
    <string name="insertTextView">Search a game by name</string>
    <string name="game_hint">Example, God of War</string>
    <string name="search_button">Search</string>
    <string name="gameCoverContentDescription">Game cover from game details fragment</string>
    <string name="header_of_game_details_fragment">Header of game details fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Click to go register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Join us an create your wish list of videogames!</string>
    <string name="swipe_right_for_login">Click to go login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="all_item_menu">All</string>
    <string name="summary_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo dignissim gravida. Curabitur arcu justo, tristique id viverra eu, interdum vel purus. Morbi at sollicitudin nunc. Donec ac leo eu orci congue lacinia eget nec odio. Pellentesque hendrerit augue vitae felis pharetra blandit. Maecenas ac cursus libero, id facilisis risus. Cras mauris mi, cursus id lacinia ac, cursus sed tortor. Curabitur placerat diam vitae convallis suscipit. In sed suscipit neque. Morbi lobortis mattis lacus, sed tristique diam fermentum sed.</string>
    <string name="story_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur commodo dignissim gravida. Curabitur arcu justo, tristique id viverra eu, interdum vel purus. Morbi at sollicitudin nunc. Donec ac leo eu orci congue lacinia eget nec odio. Pellentesque hendrerit augue vitae felis pharetra blandit. Maecenas ac cursus libero, id facilisis risus. Cras mauris mi, cursus id lacinia ac, cursus sed tortor. Curabitur placerat diam vitae convallis suscipit. In sed suscipit neque. Morbi lobortis mattis lacus, sed tristique diam fermentum sed.Vestibulum dignissim tortor quis massa tempor, id finibus eros commodo. Vivamus congue nulla eu consectetur aliquet. Quisque sed consectetur velit, ac elementum arcu. Ut vulputate eu nibh quis pharetra. Proin egestas fringilla eros, sit amet molestie enim euismod luctus. Curabitur mi diam, mollis quis iaculis in, tempor nec leo. Cras id erat leo. Proin in nunc ut velit congue consectetur. Nullam non metus dignissim, semper quam at, imperdiet lacus. Morbi fringilla ligula et commodo fermentum. Sed vitae maximus diam. Ut dignissim lorem nisi, ut porta justo viverra eget. Morbi finibus erat quis iaculis efficitur.</string>
    <string name="screenshot_description">Screenshot</string>
    <string name="search_item_menu">Search</string>
    <string name="my_games_item_menu">My Games</string>
    <string name="account_item_menu">Account</string>
    <string name="email_text">Email</string>
    <string name="username_text">Username</string>
    <string name="logout_text">Logout</string>
    <string name="your_account_text">Your account</string>
    <string name="toast_save_game">Game saved into wish list!</string>
    <string name="toast_save_game_failed">Failed saving the game into wish list!</string>
    <string name="toast_success_set_completed">Game state changed successfully!</string>
    <string name="toast_failed_set_completed">Failed changing the state of the game!</string>
    <string name="toast_game_deleted">Game deleted successfully!</string>
    <string name="toast_game_deleted_fail">Game failed on delete!</string>
    <string name="retry_text">Retry</string>
    <string name="no_games_text">No games found by this name!</string>
    <string name="no_games_list_text">There are no games in your list!</string>
    <string name="summary">Summary</string>
    <string name="storyline">Storyline</string>
    <string name="screenshots">Screenshots</string>
    <string name="genres">Genres</string>
    <string name="follows">Follows</string>
    <string name="rating">Rating</string>
    <string name="about_the_game">About the game</string>
    <string name="name">Name</string>
    <string name="developers">Developers</string>
    <string name="developers_placeholder">Sony Computer Entertaiment, Nintendo, Sega, IBM, Nasa, Sheldon Cooper, Cristiano Ronaldo and Messi</string>
    <string name="the_magnificent_game">The magnificent Game</string>
    <string name="follows_placeholder">11111</string>
</resources>